--- a/index.html
+++ b/index.html
@@ -15,6 +15,47 @@
   </head>
   <body>
 
+    <!-- Header -->
+    <header>
+      <div class="container">
+        <nav class="nav">
+          <div class="menu-toggle">
+            <i class="fas fa-bars"></i>
+            <i class="fas fa-times"></i>
+          </div>
+          <a href="index.html" class="logo">
+            <img src="./img/logo-rosa.png" alt="">
+          </a>
+          <ul class="nav-list">
+            <li class="nav-item">home</li>
+            <li class="nav-item">menu</li>
+            <li class="nav-item">reservations</li>
+            <li class="nav-item">news</li>
+            <li class="nav-item">shop</li>
+            <li class="nav-item">contact</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <section class="hero">
+      <div class="container">
+        <h2 class="sub-headline"><span class="first-letter">W</span>elcome</h2>
+        <div class="headline">the rosa</div>
+        <div class="headline-description">
+          <div class="separator">
+            <div class="line line-left"></div>
+            <div class="asterisk"></div>
+            <div class="line line-right"></div>
+          </div>
+          <div class="single-animation">
+            <h5>ready to be opened</h5>
+            <a href="#" class="btn btn-cta">explore</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
 
     
