--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             <img src="./img/logo-rosa.png" alt="">
           </a>
           <ul class="nav-list">
-            <li class="nav-item">home</li>
-            <li class="nav-item">menu</li>
-            <li class="nav-item">reservations</li>
-            <li class="nav-item">news</li>
-            <li class="nav-item">shop</li>
-            <li class="nav-item">contact</li>
+            <li class="nav-item"><a href="index.html" class="active">home</a></li>
+            <li class="nav-item"><a href="#">menu</a></li>
+            <li class="nav-item"><a href="">reservations</a></li>
+            <li class="nav-item"><a href="">news</a></li>
+            <li class="nav-item"><a href="">shop</a></li>
+            <li class="nav-item"><a href="">contact</a></li>
           </ul>
         </nav>
       </div>
