--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 
     <section class="hero">
       <div class="container">
-        <h2 class="sub-headline"><span class="first-letter">W</span>elcome</h2>
+        <h2 class="sub-headline"><span class="first-letter">w</span>elcome</h2>
         <div class="headline">the rosa</div>
         <div class="headline-description">
           <div class="separator">
             <div class="line line-left"></div>
-            <div class="asterisk"></div>
+            <div class="asterisk"><i class="fas fa-asterisk"></i></div>
             <div class="line line-right"></div>
           </div>
           <div class="single-animation">
