--- a/index.html
+++ b/index.html
@@ -56,6 +56,27 @@
       </div>
     </section>
 
+    <section class="discover-our-story">
+      <div class="container">
+        <div class="restaurant-info">
+          <div class="restaurant-description padding-right animate-left">
+            <div class="global-headline">
+              <h2 class="sub-headline"><span class="first-letter">d</span>iscover</h2>
+              <div class="headline">our story</div>
+              <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias est omnis ipsum ad rem deleniti, perferendis quas, minima ab, consequuntur similique numquam voluptatibus harum aliquid id dolor reprehenderit totam repellat! Nostrum alias corporis eum quo. Assumenda optio dolor sint vitae.</p>
+            <a href="" class="btn body-cta">About us</a>
+          </div>
+          <div class="restaurant-info-img animate-right">
+            <img src="./img/our-story-1.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
 
 
     
