--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </div>
     </header>
 
+    <!-- Hero -->
     <section class="hero">
       <div class="container">
         <h2 class="sub-headline"><span class="first-letter">w</span>elcome</h2>
@@ -56,6 +57,7 @@
       </div>
     </section>
 
+    <!-- Discover Our Story -->
     <section class="discover-our-story">
       <div class="container">
         <div class="restaurant-info">
@@ -75,14 +77,76 @@
       </div>
     </section>
 
+    <!-- Tasteful -->
+    <section class="tasteful between">
+      <div class="container">
+        <div class="global-headline">
+          <div class="animate-top">
+            <h2 class="sub-headline"><span class="first-letter">T</span>asteful</h2>
+          </div>
+          <div class="animate-bottom">
+            <h1 class="headline">Recipes</h1>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <!-- Discover Our Menu -->
+    <section class="discover-our-menu">
+      <div class="container">
+        <div class="restaurant-info">
+          <div class="image-group">
+            <img src="./img/menu-group-1.jpg" alt="">
+            <img src="./img/menu-group-2.jpg" alt="">
+            <img src="./img/menu-group-3.jpg" alt="">
+            <img src="./img/menu-group-4.jpg" alt="">
+          </div>
+          <div class="restaurant-description">
+            <div class="global-headline">
+              <h2 class="sub-headline"><span class="first-letter">d</span>iscover</h2>
+              <h2 class="headline headline-dark">menu</h2>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptate quis qui aut itaque sunt eos omnis ullam ratione dolore enim officiis repellendus accusamus rem maxime quam accusantium libero similique.</p>
+            <a href="" class="btn body-cta">view the full menu</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
+     <!-- The perfect blend -->
+     <section class="perfect-blend between">
+      <div class="container">
+        <div class="global-headline">
+          <div class="animate-top">
+            <h2 class="sub-headline"><span class="first-letter">T</span>he perfect</h2>
+          </div>
+          <div class="animate-bottom">
+            <h1 class="headline">blend</h1>
+          </div>
+        </div>
+      </div>
+    </section>
 
-
-    
-
-
-
+      <!-- Culinary Delight -->
+      <section class="culinary-delight">
+        <div class="container">
+          <div class="restaurant-info">
+            <div class="restaurant-description">
+              <div class="global-headline">
+                <h2 class="sub-headline"><span class="first-letter">C</span>ulinary</h2>
+                <h2 class="headline headline-dark">menu</h2>
+                <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+              </div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptate quis qui aut itaque sunt eos omnis ullam ratione dolore enim officiis repellendus accusamus rem maxime quam accusantium libero similique.</p>
+              <a href="" class="btn body-cta">Make a reservation</a>
+            </div>
+            <div class="image-group">
+              <img src="./img/delight-group-1.jpg" alt="">
+              <img src="./img/delight-group-2.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
 
 
 
