--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
             <div class="restaurant-description">
               <div class="global-headline">
                 <h2 class="sub-headline"><span class="first-letter">C</span>ulinary</h2>
-                <h2 class="headline headline-dark">menu</h2>
+                <h2 class="headline headline-dark">delight</h2>
                 <div class="asterisk"><i class="fas fa-asterisk"></i></div>
               </div>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptate quis qui aut itaque sunt eos omnis ullam ratione dolore enim officiis repellendus accusamus rem maxime quam accusantium libero similique.</p>
-              <a href="" class="btn body-cta">Make a reservation</a>
+              <a href="#" class="btn body-cta">Make a reservation</a>
             </div>
             <div class="image-group">
               <img src="./img/delight-group-1.jpg" alt="">
@@ -147,6 +147,39 @@
           </div>
         </div>
       </section>
+
+      <!-- Footer -->
+      <footer class="container">
+        <div class="back-to-top">
+          <a href="#"><i class="fas fa-chevron-up"></i></a>
+        </div>
+        <div class="footer-content">
+          <div class="footer-content-about">
+            <h4>about rosa</h4>
+            <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis voluptatibus aliquam amet. Et odio molestiae tenetur ipsa optio, nesciunt dolorum dignissimos, libero ducimus nihil reiciendis impedit quod possimus. Quas totam officia consectetur tempore natus vero corporis error </p>
+          </div>
+          <div class="footer-content-divider">
+            <div class="social-media">
+              <h4>follow along</h4>
+              <ul class="social-icon">
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-google-plus"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              </ul>
+            </div>
+            <div class="newsletter-container">
+              <h4>newsletter</h4>
+              <form action="" class="newsletter-form">
+                <input type="text" class="newsletter-input" placeholder="Your Email Adress">
+                <button type="submit" class="newsletter-btn"><i class="fas fa-envelope"></i></button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </footer>
 
 
 
