--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
               <h2 class="sub-headline"><span class="first-letter">d</span>iscover</h2>
               <h2 class="headline headline-dark">menu</h2>
             </div>
+            <div class="asterisk"><i class="fas fa-asterisk"></i></div>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptate quis qui aut itaque sunt eos omnis ullam ratione dolore enim officiis repellendus accusamus rem maxime quam accusantium libero similique.</p>
             <a href="" class="btn body-cta">view the full menu</a>
           </div>
