--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     <!-- Hero -->
     <section class="hero">
       <div class="container">
-        <h2 class="sub-headline"><span class="first-letter">w</span>elcome</h2>
-        <div class="headline">the rosa</div>
+        <h2 class="sub-headline animate-fadeUp"><span class="first-letter">w</span>elcome</h2>
+        <div class="headline animate-scale">the rosa</div>
         <div class="headline-description">
           <div class="separator">
-            <div class="line line-left"></div>
+            <div class="line animate-grow line-left"></div>
             <div class="asterisk"><i class="fas fa-asterisk"></i></div>
-            <div class="line line-right"></div>
+            <div class="line animate-grow line-right"></div>
           </div>
           <div class="single-animation">
             <h5>ready to be opened</h5>
@@ -182,12 +182,7 @@
         </div>
       </footer>
 
-
-
-
     <!-- Optional JavaScript -->
-    <script src="./js/jquery-3.4.1.min.js"></script>
-    <script src="./vender/scrollreveal.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
